--- a/.github/workflows/run-robot-tests.yml
+++ b/.github/workflows/run-robot-tests.yml
@@ -47,7 +47,8 @@ jobs:
       - name: Run Robot Framework Tests
         run: |
           cd Robot_tests
-          robot -d results --output output.xml --log log.html --report report.html .
+          robot -d results FourmTests.robot --output output.xml --log log.html --report report.html .
+          robot -L debug redCard_blueCard.robot --output output.xml --log log.html --report report.html .
 
       - name: Upload Test Reports
         if: always()
