--- a/.github/workflows/run-robot-tests.yml
+++ b/.github/workflows/run-robot-tests.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Run Robot Framework Tests
         run: |
           cd Robot_tests
-          robot -d results
+          robot -d results .
 
       - name: Upload Test Reports
         if: always()
