--- a/.github/workflows/run-robot-tests.yml
+++ b/.github/workflows/run-robot-tests.yml
@@ -46,9 +46,12 @@ jobs:
 
       - name: Install Chrome and ChromeDriver
         run: |
-          sudo apt update
-          sudo apt install -y google-chrome-stable
-          sudo apt install -y chromedriver
+              sudo apt update
+              sudo apt install -y google-chrome-stable
+              CHROME_DRIVER_VERSION=$(curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE)
+              wget -N https://chromedriver.storage.googleapis.com/$CHROME_DRIVER_VERSION/chromedriver_linux64.zip
+              unzip chromedriver_linux64.zip -d /usr/local/bin/
+              rm chromedriver_linux64.zip
 
       - name: Run Robot Framework Tests in Headless Mode
         run: |
